[workspace]
resolver = "2"
members = [
    "bumper",
    "modeling-cmds",
    "modeling-cmds-macros",
    "modeling-session",
    "unit-conversion-derive",
]

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[workspace.dependencies]
kittycad = { version = "0.3.14", features = ["requests"] }
kittycad-modeling-cmds = { path = "modeling-cmds", version = "0.2.0" }
kittycad-modeling-cmds-macros = { path = "modeling-cmds-macros", version = "0.1.9" }
kittycad-modeling-session = { path = "modeling-session", version = "0.1.2" }
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.75"
