[workspace]
resolver = "2"
members = [
    "bumper",
    "modeling-cmds",
    "modeling-cmds-macros",
    "modeling-cmds-macros-impl",
    "modeling-session",
    "unit-conversion-derive",
]

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[workspace.dependencies]
kittycad = { version = "0.3.28", features = ["requests"] }
kittycad-modeling-cmds = { path = "modeling-cmds", version = "0.2.0" }
kittycad-modeling-cmds-macros = { path = "modeling-cmds-macros", version = "0.1.11" }
kittycad-modeling-cmds-macros-impl = { path = "modeling-cmds-macros-impl", version = "0.1.12" }
kittycad-modeling-session = { path = "modeling-session", version = "0.1.2" }
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"

[profile.bench]
debug = true
