
[package]
name = "bumper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-api"
rust-version = "1.76"
description = "Bumps versions in Cargo.toml"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.22", features = ["derive"] }
semver = "1.0.22"
serde = "1.0.215"
toml_edit = "0.22.16"

[lints]
workspace = true

