
[package]
name = "bumper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-api"
rust-version = "1.76"
description = "Bumps versions in Cargo.toml"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
semver = "1.0.26"
serde = "1.0.219"
toml_edit = "0.23.4"

[lints]
workspace = true

