[package]
name = "kittycad-execution-plan-debugger"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-api"
rust-version = "1.73"
description = "Debugger for KittyCAD execution plans"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
crossterm = "0.27.0"
kittycad = { workspace = true }
kittycad-execution-plan = { workspace = true }
kittycad-execution-plan-traits = { workspace = true }
kittycad-modeling-cmds = { workspace = true }
kittycad-modeling-session = { workspace = true }
ratatui = { version = "0.26.1", features = ["all-widgets"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.35.0", features = ["rt", "macros"] }

[lints]
workspace = true

