[package]
name = "kittycad-execution-plan-macros"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/KittyCAD/execution-plan"
rust-version = "1.73"
description = "Macros for working with KittyCAD execution plans"
authors = ["Adam Chalmers"]
keywords = ["kittycad"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.41", features = ["extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.75"
insta = "1.34.0"
kittycad-execution-plan-traits = "0.1.8"
regex = "1.10.2"
rustfmt-wrapper = "0.2.1"
