[package]
name = "kittycad-execution-plan-traits"
version = "0.1.1"
edition = "2021"
authors = ["KittyCAD, Inc."]
description = "Types for KittyCAD execution plans"
rust-version = "1.74"
repository = "https://github.com/KittyCAD/modeling-api"
keywords = ["kittycad"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
uuid = { version = "1.6.1", features = ["serde"] }

[lints]
workspace = true
