[package]
name = "kittycad-execution-plan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KittyCAD/execution-plan"
rust-version = "1.73"
description = "A DSL for composing KittyCAD API queries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
kittycad-modeling-cmds = "0.1.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = "1.6.1"

[lints]
workspace = true
