[package]
name = "kittycad-execution-plan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-api"
rust-version = "1.73"
description = "A DSL for composing KittyCAD API queries"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
gltf-json = "1.4.0"
insta = "1.34.0"
kittycad = { workspace = true }
kittycad-execution-plan-macros = { workspace = true }
kittycad-execution-plan-traits = { workspace = true }
kittycad-modeling-cmds = { workspace = true }
kittycad-modeling-session = { workspace = true }
parse-display-derive = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
tabled = "0.15.0"
thiserror = "1"
tokio = { version = "1.35.0", features = ["rt", "macros"] }
uuid = "1.6.1"

[lints]
workspace = true

[dev-dependencies]
image = { version = "0.24.7", default-features = false, features = ["png"] }
twenty-twenty = "0.7.0"
