[package]
name = "kittycad-modeling-cmds-macros"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-api"
rust-version = "1.73"
description = "Macros for defining KittyCAD modeling commands"
authors = ["Adam Chalmers"]
keywords = ["kittycad"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.33"
syn = { version = "2.0.74", features = ["extra-traits", "full"] }

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.75"
insta = "1.34.0"
regex = "1.10.6"
rustfmt-wrapper = "0.2.1"
