[package]
name = "kittycad-modeling-cmds-macros"
version = "0.1.12"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-api"
rust-version = "1.73"
description = "Macros for defining KittyCAD modeling commands"
authors = ["Adam Chalmers"]
keywords = ["kittycad"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kittycad-modeling-cmds-macros-impl = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }

[lib]
proc-macro = true

[dev-dependencies]
anyhow = "1.0.91"
insta = "1.40.0"
regex = "1.11.1"
rustfmt-wrapper = "0.2.1"

