[package]
name = "kittycad-modeling-session"
version = "0.1.4"
edition = "2021"
authors = ["KittyCAD, Inc."]
description = "Start a session with the KittyCAD Modeling API"
rust-version = "1.74"
repository = "https://github.com/KittyCAD/modeling-api"
keywords = ["kittycad"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
kittycad = { workspace = true }
kittycad-modeling-cmds = { workspace = true, features = ["websocket"] }
lsystem = "0.2.1"
reqwest = "0.11.22"
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1", features = ["sync"] }
tokio-tungstenite = "0.23.1"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
color-eyre = "0.6"
image = "0.25.1"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
