[package]
name = "kittycad-unit-conversion-derive"
description = "Derive functions for unit conversions."
version = "0.1.0"
authors = ["Jess Frazelle <jess@kittycad.io>"]
edition = "2018"
repository = "https://github.com/KittyCAD/modeling-api"
keywords = ["kittycad"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
inflections = "1"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "fold"] }

[dev-dependencies]
pretty_assertions = "1"
